--- a/css/main.css
+++ b/css/main.css
@@ -223,20 +223,69 @@ textarea {
      font-family: 'Dosis';
      text-decoration: none;
      color: #fff;
-     padding:0.5rem 1rem;
+     padding:0 0.5rem;
      margin:1rem 0;
      display: inline-block;
      border: 0;
+     border: none;
+     cursor: pointer;
+     outline: none;
+     position: relative;
+    -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+      line-height: 2.7em;
  }
+    .button:after{
+        content: "";
+        position: absolute;
+        height: 100%;
+        left: 50%;
+        right: 50%;
+        border-radius: inherit;
+        background-color: rgba(255, 255, 255, 0.15);
+        -webkit-transition: all 0.3s;
+        transition: all 0.3s;
+    }
+
+    .button:before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      left: 0;
+      top: 0;
+      -webkit-transform: translateY(5px);
+      transform: translateY(5px);
+      background-color: inherit;
+      border-radius: 10px;
+      z-index: -1;
+      box-shadow: inset 0 -6px 10px rgba(0, 0, 0, 0.75);
+    }
+
+    .button:hover{
+        color: #fff;
+        background-color: #FA5364;
+    }
+
+    .button:hover:after,
+    .button.hover:after {
+      left: 0;
+      right: 0;
+    }
+
+
+
 
     .button--main{
         background-color: #FF5253;
         text-align: center;
-        max-width: 180px;
+        max-width: 150px;
         margin-right: auto;
         margin-left: auto;
         display:block;
     }
+
+
 
 
 
@@ -581,8 +630,12 @@ textarea {
         color:#000;
         padding: 0.2rem 0.5rem;
         margin-bottom: 1rem;
-
     }
+        .ap-tags a:hover{
+            background-color: #0071BC;
+            color: #fff;
+            border-color: #fff;
+        }
 
         .ap-tags li:last-child a{
             margin-right: 0;
@@ -1085,6 +1138,10 @@ textarea {
             align-items: center;
             margin: 1rem 0;
         }
+
+            .register__user figure{
+                max-width: 120px;
+            }
 
         .register__information{
             margin-left:1rem;
